make sure endpoints in swagger
